--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -1,3 +1,30 @@
+@media screen and (max-width:600px){
+    .experience_container{
+        gap: 2rem;
+    }
+
+    .experience_container > div {
+        /* width: var(--container-width-md); */
+        padding: 2rem 2rem;
+        /* text-align: center; */
+    }
+
+}
+@media screen and (max-width:1024px){
+    .experience_container{
+        gap: 2rem;
+    }
+
+    .experience_container > div {
+        /* width: var(--container-width-md); */
+        padding: 3rem 3rem;
+        /* text-align: center; */
+
+    }
+
+}
+
+
 .experience_container{
     display: grid;
 }
@@ -25,6 +52,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     row-gap: 2rem;
+    justify-items: center;
 
 }
 
@@ -37,3 +65,4 @@
     margin-top: 6px;
     color: var(--color-primary);
 }
+
