--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ html {
 }
 
 ::-webkit-scrollbar {
-    display: none;
+    display: block;
 }
 
 body{
@@ -37,6 +37,7 @@ body{
     color: var(--color-white);
     line-height: 1.7 ;
     background-image: url(../src/assets/bg-texture.png);
+    overflow-y: scroll;
 }
 
 .container {
