struktur htm dan cssnya hampir selesai. tinggal cek lagi layoutnya dan style2nya

--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -19,8 +19,9 @@
 
 .services_container{
     display: grid;
-    grid-template-columns: repeat(3, ifr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 3rem;
+    align-items: center;
 }
 
 .service {
