--- a/src/index.css
+++ b/src/index.css
@@ -35,10 +35,9 @@ html {
 
 body {
   font-family: "Poppins", sans-serif;
-  background: var(--color-bg);
+  background: darkslategrey;
   color: var(--color-white);
   line-height: 1.7;
-  background-image: url(../src/assets/bg-texture.png);
   overflow-y: scroll;
 }
 
