--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,47 +1,18 @@
 .about_container {
-  display: grid;
-  grid-template-columns: 35% 50%;
-  gap: 15%;
-}
-
-.about_me {
-  width: 100%;
-  aspect-ratio: 1/1;
-  border-radius: 2rem;
-  background: linear-gradient(
-    45deg,
-    transparent,
-    var(--color-primary),
-    transparent
-  );
-  display: grid;
-  place-items: center;
-}
-
-.about_me-image {
-  border-radius: 2rem;
-  overflow: hidden;
-  transform: rotate(10deg);
-  transition: var(--transition);
-  background: linear-gradient(
-    45deg,
-    transparent,
-    var(--color-primary),
-    transparent
-  );
-}
-
-.about_me-image:hover {
-  transform: rotate(0);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10rem;
 }
 
 .about_cards {
   display: grid;
-  grid-template-row: repeat(2, 1fr);
 }
 
 .about_cards {
-  background: var(--color-bg-variant);
+  background: var(--color-primary);
+  color: white;
   border: 1px solid transparent;
   padding: 2rem;
   border-radius: 1rem;
@@ -50,12 +21,10 @@
 
 .about_cards :hover {
   background: transparent;
-  border-color: var(--color-primary);
   cursor: default;
 }
 
 .about_icon {
-  color: var(--color-primary);
   font-size: 1.4rem;
   margin-bottom: 1rem;
 }
