--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,16 +1,16 @@
-.container.contact_container {
-  width: 58%;
-  display: grid;
-  grid-template-columns: 30% 58%;
-  gap: 12%;
+#contact {
+  background-color: var(--color-bg);
+  padding: 1rem;
 }
-
+.form {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
 .contact_options {
   display: flex;
   flex-direction: column;
   gap: 1.2rem;
 }
-
 .contact_option {
   background: var(--color-bg-variant);
   border-radius: 2rem;
@@ -18,7 +18,6 @@
   transition: var(--transition);
   text-align: center;
 }
-
 .container_option {
   background: var(--color-bg-variant);
   border: 1.2rem;
@@ -26,19 +25,14 @@
   border: 1px solid transparent;
   transition: var(--transition);
 }
-
 .contact_option:hover {
   background: transparent;
   border-color: var(--color-primary-variant);
 }
-
 .contact_options-icon {
   font-size: 1.5rem;
   margin-bottom: 0.5rem;
-  /* display: inline-block;
-    font-size: 0.8rem; */
 }
-
 .contact_option a {
   margin: 0.7rem;
   display: inline-block;
@@ -46,7 +40,6 @@
 }
 
 /* form */
-
 form {
   display: flex;
   flex-direction: column;
@@ -63,9 +56,7 @@ textarea {
   resize: none;
   color: white;
 }
-
 /* media queries */
-
 @media screen and (max-width: 1024px) {
   .container.contact_container {
     grid-template-columns: 1fr;
@@ -76,5 +67,10 @@ textarea {
 @media screen and (max-width: 600px) {
   .container.contact_container {
     width: var(--container-width-sm);
+  }
+}
+@media screen and (max-width: 412px) {
+  #contact {
+    padding-bottom: 6rem;
   }
 }
