--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -1,3 +1,7 @@
+#experience {
+  background-color: var(--color-bg);
+  padding: 2rem;
+}
 @media screen and (max-width: 600px) {
   .experience_container {
     gap: 1rem;
@@ -7,9 +11,7 @@
     width: 80vw !important;
     margin: 1rem auto !important;
   }
-
   .experience_container > div {
-    /* width: var(--container-width-md); */
     padding: 1 !important;
     /* text-align: center; */
   }
@@ -23,11 +25,8 @@
   .experience_container {
     gap: 2rem;
   }
-
   .experience_container > div {
-    /* width: var(--container-width-md); */
     padding: 3rem 3rem;
-    /* text-align: center; */
   }
 }
 
@@ -35,38 +34,27 @@
   display: grid;
 }
 .experience_container > div {
-  background: var(--color-bg-variant);
+  background: var(--color-primary);
   padding: 2.4rem 5rem;
   border-radius: 2rem;
   border: 1px solid transparent;
   transition: var(--transition);
+  color: white;
 }
-
-.experience_container > div:hover {
-  background: transparent;
-  border-color: var(--color-primary-variant);
-  cursor: default;
-}
-
 .experience_container > div h3 {
   text-align: center;
   margin-bottom: 2rem;
-  color: var(--color-primary);
 }
-
 .experience_content {
   display: grid;
   grid-template-columns: 1fr 1fr;
   row-gap: 2rem;
   justify-items: center;
 }
-
 .experience_details {
   display: flex;
   gap: 1rem;
 }
-
 .experience_details-icon {
   margin-top: 6px;
-  color: var(--color-primary);
 }
