--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -24,11 +24,7 @@ nav a {
     font-size: 1.1 rem;
 }
 
-nav a:hover{
-    background: rgba(0,0,0,0.3);
-}
-
 nav a.active{
-    background: var(--color-bg);
+    background: var(--color-btn);
     color:var(--color-white);
 }
