--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,400;1,500;1,600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Port+Lligat+Sans&display=swap');
 * {
+  font-family: 'Port Lligat Sans', sans-serif;
   margin: 0;
   padding: 0;
   border: 0;
@@ -7,22 +8,22 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
+  overflow-x: hidden;
 }
-
 /* css variaabel */
 :root {
-  --color-bg: #1f1f38;
+  --color-bg: #48aed8;
   --color-bg-variant: #2c2c6c;
-  --color-primary: #4db5ff;
+  --color-primary: #bcd4f7;
   --color-primary-variant: rgba (77, 181, 255, 0.4);
   --color-white: #fff;
   --color-light: rbga(255.255, 255, 0.6);
+  --color-btn: #2a3344;
   --container-width-lg: 75%;
   --container-width-md: 86%;
   --container-width-sm: 90%;
   --transition: all 400ms ease;
 }
-
 html {
   scroll-behavior: smooth;
   width: 100vw !important;
@@ -32,20 +33,17 @@ html {
 ::-webkit-scrollbar {
   display: block;
 }
-
 body {
-  font-family: "Poppins", sans-serif;
-  background: darkslategrey;
-  color: var(--color-white);
   line-height: 1.7;
-  overflow-y: scroll;
+  background-color: var(--color-bg);
 }
-
 .container {
   width: var(--container-width-lg);
   margin: 0 auto;
 }
-
+.title {
+  margin-bottom: 2rem;
+}
 h1,
 h2,
 h3,
@@ -58,7 +56,7 @@ h1 {
 }
 
 section {
-  margin-top: 8rem;
+  margin-top: 3rem;
 }
 
 section > h2,
@@ -68,7 +66,6 @@ section > h5 {
 }
 
 section > h2 {
-  color: var(--color-primary);
   margin-bottom: 3 rem;
 }
 
@@ -77,18 +74,17 @@ section > h2 {
 }
 
 a {
-  color: var(--color-primary);
   transition: var(--transition);
 }
 
 a:hover {
   color: var(--color-white);
+  background-color: var(--color-btn);
 }
 
 .btn {
   width: max-content;
   display: inline-block;
-  color: var(--color-primary);
   padding: 0.75rem 1.2rem;
   border-radius: 0.4rem;
   cursor: pointer;
@@ -103,8 +99,8 @@ a:hover {
 }
 
 .btn-primary {
-  background: var(--color-primary);
-  color: var(--color-bg);
+  background: var(--color-btn);
+  color: white
 }
 
 img {
@@ -112,29 +108,13 @@ img {
   width: 100%;
   object-fit: cover;
 }
-
 #root {
   width: 100vw !important;
 }
+.align-right {
+  justify-content: end;
+}
 
-/* media queries tablet  (medium)*/
-/* @media screen and (max-width: 1024px) {
-  .container {
-    width: var(--container-width-md);
-  }
-
-  section {
-    margin-top: 6rem;
-  }
-} */
-/* small */
-
-/* @media screen and (max-width: 600px) {
-  .container {
-    width: var(--container-width-sm);
-  }
-
-  section > h2 {
-    margin-bottom: 2rem;
-  }
-} */
+.d-flex {
+  display: flex;
+}
